@@ -10,17 +10,21 @@ __docformat__ = 'reStructuredText'
 
 
 import sys
+import urllib
 from docutils import nodes, utils
 from docutils.parsers.rst import Directive
 from docutils.parsers.rst import directives, states
 from docutils.nodes import fully_normalize_name, whitespace_normalize_name
 from docutils.parsers.rst.roles import set_classes
-
-try:
-    import Image as PIL                        # PIL
+try: # check for the Python Imaging Library
+    import PIL
 except ImportError:
-    PIL = None
-
+    try:  # sometimes PIL modules are put in PYTHONPATH's root
+        import Image
+        class PIL(object): pass  # dummy wrapper
+        PIL.Image = Image
+    except ImportError:
+        PIL = None
 
 class Image(Directive):
 
@@ -121,15 +125,17 @@ class Figure(Image):
         figure_node = nodes.figure('', image_node)
         if figwidth == 'image':
             if PIL and self.state.document.settings.file_insertion_enabled:
-                # PIL doesn't like Unicode paths:
+                imagepath = urllib.url2pathname(image_node['uri'])
                 try:
-                    i = PIL.open(str(image_node['uri']))
-                except (IOError, UnicodeError):
-                    pass
+                    img = PIL.Image.open(
+                            imagepath.encode(sys.getfilesystemencoding()))
+                except (IOError, UnicodeEncodeError):
+                    pass # TODO: warn?
                 else:
                     self.state.document.settings.record_dependencies.add(
-                        image_node['uri'])
-                    figure_node['width'] = i.size[0]
+                        imagepath.replace('\\', '/'))
+                    figure_node['width'] = img.size[0]
+                    del img
         elif figwidth is not None:
             figure_node['width'] = figwidth
         if figclasses:
